[gd_scene load_steps=4 format=3 uid="uid://bs5c8igmjcd2l"]

[ext_resource type="Script" path="res://main.gd" id="1_s411w"]
[ext_resource type="PackedScene" uid="uid://dqyj5vkhsshly" path="res://level_select.tscn" id="2_8ut56"]
[ext_resource type="PackedScene" uid="uid://ckvlyhyictlq7" path="res://player.tscn" id="3_nf827"]

[node name="Main" type="Node"]
script = ExtResource("1_s411w")

[node name="World" type="Node" parent="."]

[node name="LevelSelect" parent="World" instance=ExtResource("2_8ut56")]

[node name="Player" parent="World" instance=ExtResource("3_nf827")]
z_index = 1000
position = Vector2(141, 1294)

[connection signal="dropped" from="World/Player" to="." method="_on_player_dropped"]
[connection signal="enteredDoor" from="World/Player" to="." method="_on_player_entered_door"]
